<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>jar</packaging>
    <artifactId>hongs-serv-server</artifactId>
    <parent>
        <artifactId>hongs-base</artifactId>
        <groupId>io.github.ihongs</groupId>
        <version>1.2-SNAPSHOT</version>
    </parent>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <jetty.version>11.0.26</jetty.version>
    </properties>
    <dependencies>
        <dependency>
            <artifactId>hongs-core</artifactId>
            <groupId>${project.groupId}</groupId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <artifactId>jetty-server</artifactId>
            <groupId>org.eclipse.jetty</groupId>
            <version>${jetty.version}</version>
        </dependency>
        <dependency>
            <artifactId>jetty-webapp</artifactId>
            <groupId>org.eclipse.jetty</groupId>
            <version>${jetty.version}</version>
        </dependency>
        <dependency>
            <artifactId>jetty-plus</artifactId>
            <groupId>org.eclipse.jetty</groupId>
            <version>${jetty.version}</version>
        </dependency>
        <dependency>
            <artifactId>apache-jsp</artifactId>
            <groupId>org.eclipse.jetty</groupId>
            <version>${jetty.version}</version>
        </dependency>
        <!-- server.stop, send sigint(ctrl+c) -->
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>5.18.1</version>
        </dependency>
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna-platform</artifactId>
            <version>5.18.1</version>
        </dependency>
    </dependencies>
</project>